# battleship

./: .gitignore  README.md
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/battleship/: __main__.py
backend/battleship/actions/: __init__.py  get_players.py  get_players_stats.py  get_ships.py  get_shots.py  get_status.py  is_can_move.py  join_game.py  rejoin_game.py  shot.py  start_game.py  who_move.py
backend/battleship/models/: __init__.py  board.py  colors.py  coord.py  game.py  game_status.py  player.py  ship.py  shot_info.py  shot_type.py
backend/battleship/routers/: __init__.py  game.py  websockets.py
backend/battleship/schemas/: __init__.py  coord.py  get_ships.py  is_can_move.py  join_game.py  player_join.py  rejoin_game.py  shot.py
backend/battleship/utils/: config.py  manager.py  websocket_utils.py
frontend/: .env.example  Makefile  pyproject.toml
frontend/frontend/: __main__.py
frontend/frontend/pages/: create_player.html  game.html  lobby.html
